fixing overflow visibility in bento__elem

--- a/style.css
+++ b/style.css
@@ -70,7 +70,8 @@ main {
 .bento__elem, .sub-grid__elem{
     padding-inline: 12.5%;
     border-radius: 15px;
-    
+    overflow-x: hidden;
+
     display: flex;
     justify-content: center;
     flex-flow: column nowrap;
